# x-IMU3-CSV

./: README.md  pyproject.toml  setup.py  ximu3csv.py
.github/workflows/: main.yml
Examples/: example.py  hints_and_helpers.py  log_example_data.py  plot_all_data_messages.py  plot_synchronised_devices.py  print_all_properties.py  print_all_property_types.py
Examples/Logged Data/x-IMU3 - F7E4-5410-EC7B-D7E7 (USB)/: Battery.csv  Command.json  HighGAccelerometer.csv  Inertial.csv  Magnetometer.csv  Quaternion.csv  Temperature.csv
Examples/Logged Data/x-IMU3 673B204B (UDP)/: AhrsStatus.csv  Battery.csv  Command.json  EarthAcceleration.csv  EulerAngles.csv  HighGAccelerometer.csv  Inertial.csv  LinearAcceleration.csv  Magnetometer.csv  Notification.csv  Quaternion.csv  RotationMatrix.csv  Rssi.csv  SerialAccessory.csv  Temperature.csv
ximu3csv/: __init__.py  convert_to_euler_angles.py  crop.py  data_messages.py  device.py  read.py  resample.py  zero_first_timestamp.py  zero_heading.py
