[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ximu3csv"
version = "1.0.2"
description = "x-IMU3 CSV"
readme = { text = "See [github](https://github.com/xioTechnologies/x-IMU3-CSV) for documentation and examples.", content-type = "text/markdown" }
authors = [{ name = "x-io Technologies Limited", email = "info@x-io.co.uk" }]
license = { file = "LICENSE.md" }

[project.urls]
Repository = "https://github.com/xioTechnologies/x-IMU3-CSV"

[tool.setuptools]
packages = ["ximu3csv"]
